kube-deploy/traefik/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      containers:
        - name: traefik
          image: traefik:v3.3
          args:
            - "--api.insecure=true"
            - "--providers.kubernetesingress"
            - "--entrypoints.web.address=:80" 
            - "--entrypoints.web.http.redirections.entryPoint.to=websecure"
            - "--entrypoints.websecure.address=443"
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: admin
              containerPort: 8080
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
